spacing issue between buttons fixed

--- a/src/app/pages/homepage/homepage.component.scss
+++ b/src/app/pages/homepage/homepage.component.scss
@@ -1,4 +1,3 @@
-/* General Page Styling */
 body, html {
   font-family: 'Arial', sans-serif;
   background-color: #f5f5f5;
@@ -69,7 +68,7 @@ button {
 
 .session-details, .exam-details {
   flex-grow: 1;
-  margin-right: 10px; // Give some space before the buttons
+  margin-right: 10px; 
 }
 
 .button-container {
@@ -78,44 +77,39 @@ button {
   gap: 10px;
 }
 
-.edit-event, .delete-event {
+.edit-button, .delete-button, .complete-button, .pomodoro-button {
+  padding: 10px 15px; 
   border: none;
   color: white;
-  padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
+  text-align: center;
 }
 
 .edit-button {
-  background-color: #ffc107; /* Dark yellow */
+  background-color: #ffc107;
   &:hover {
-    background-color: #b28900; /* Darker shade of yellow on hover */
+    background-color: #b28900;
   }
 }
 
 .delete-button {
-  background-color: #dc3545; /* Red */
+  background-color: #dc3545;
   &:hover {
-    background-color: #bd2130; /* Darker shade of red on hover */
+    background-color: #bd2130;
   }
 }
 
 .complete-button {
-  background-color: #17a2b8; 
+  background-color: #17a2b8;
   &:hover {
     background-color: darken(#17a2b8, 5%);
   }
 }
 
 .pomodoro-button {
-  background-color: #d9534f; /* Pomodoro red color */
-  color: white;
-  cursor: pointer;
-  padding: 10px 15px;
-  border-radius: 4px;
-  border: none;
-  margin-left: 10px; /* spacing */
+  background-color: #28a745; 
   &:hover {
-    background-color: #c9302c; /* Darker red on hover */
+    background-color: #218838;
   }
 }
